--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -6,6 +6,10 @@
 
 {% block content %}
 <style>
+@import url({{ page.primary_font_url }}); 
+a,p,h1,h2,h3,h4,h5,h6 {
+{{ page.primary_font_family|richtext }}
+}
 .color-fluid {
 background-color:{{ page.page_theme_color }};
 border-radius: 10%;
